# meerkatREPL2.0

./: .gitignore  Cargo.toml  README.md  build.rs
meerkat2.0/: Cargo.toml  README.md
meerkat2.0/src/: lib.rs  tests.rs
src/: comm.rs  error.rs  main.rs
src/ast/: mod.rs  utils.rs
src/backend/: defworker.rs  manager.rs  message.rs  mod.rs  transaction.rs  varworker.rs
src/frontend/: meerast.rs  mod.rs  parse.lalrpop  typecheck.rs
src/new_runtime/: message.rs  mod.rs  service.rs
src/new_runtime/evaluator/: mod.rs
src/new_runtime/service/: held_locks.rs  reactive.rs
src/parse/: meerkat.lalrpop  mod.rs
src/parser/: lex.rs  meerkat.lalrpop  meerkat.rs  mod.rs
src/runtime/: def_batch_utils.rs  def_eval.rs  defworker.rs  instr.rs  lock.rs  message.rs  mod.rs  transaction.rs  varworker.rs  versioning.rs
src/runtime/actor/: mod.rs
src/runtime/actors/: mod.rs
src/runtime/def_actor/: handler.rs  history.rs  manager.rs  mod.rs  pending.rs
src/runtime/def_actor/state/: history.rs  mod.rs  pending.rs
src/runtime/evaluator/: eval_expr.rs  eval_stmt.rs  mod.rs  utils.rs
src/runtime/manager/: alloc_actors.rs  do_action.rs  handler.rs  mod.rs  try_test.rs  txn_manager.rs  txn_utils.rs
src/runtime/manager/action/: do_action.rs  mod.rs  txn_manager.rs
src/runtime/pubsub/: mod.rs
src/runtime/table_actor/: handler.rs  mod.rs  state.rs
src/runtime/var_actor/: handler.rs  mod.rs  state.rs  value_state.rs
src/static_analysis/: mod.rs
src/static_analysis/typecheck/: mod.rs  tc_expr.rs  tc_srvs.rs  tc_stmt.rs  tc_test.rs  utils.rs
src/static_analysis/var_analysis/: alpha_rename.rs  dep_analysis.rs  free_var.rs  mod.rs  read_write.rs
src/typecheck/: mod.rs  tc_expr.rs  tc_srvs.rs  tc_stmt.rs  utils.rs
tests/: simple.meerkat  test0.meerkat  test1.meerkat  test2.meerkat  test3.meerkat  test4.meerkat  test5.meerkat  test6.meerkat  test7.meerkat  test8.meerkat  test_func_update.meerkat  tiny.meerkat  upgrade0.meerkat
(+5 files in other folders)
