[package]
name = "meerkat_distributed"
version = "0.3.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"


[dependencies]
logos = "0.12.1"
enum-as-inner = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.61"
strum_macros = "0.25.3"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
# pretty = "0.12.3"
inline_colorization = "0.1.5"
# petgraph = "0.6.5"
kameo = "0.16"
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
# tokio-util = "0.7.11"
