[package]
name = "meerkat_distributed"
version = "0.3.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
# compiler related
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

# distributed system related 
kameo = "0.16"
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
# tokio-util = "0.7.11"
futures = "0.3"

# data structure / algorithm implementations
priority-queue = "1.3"

# debug / formatting
inline_colorization = "0.1.5"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
